Obstacle Controller 1 stage

--- a/100-thai-flag-game.csproj
+++ b/100-thai-flag-game.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Assets\Scripts\PoleCtrl.cs" />
     <Compile Include="Assets\Scripts\Reset.cs" />
     <Compile Include="Assets\Scripts\TransactionScene.cs" />
+    <Compile Include="Assets\Scripts\Utility.cs" />
     <Compile Include="Assets\Scripts\WindForce.cs" />
     <Compile Include="Assets\StageController.cs" />
   </ItemGroup>
