langauge selection page

--- a/100-thai-flag-game.csproj
+++ b/100-thai-flag-game.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Assets\Scripts\GameController\ObstacleController.cs" />
     <Compile Include="Assets\Scripts\HorizontalMovementBird.cs" />
     <Compile Include="Assets\Scripts\LoadingScene\Fading.cs" />
+    <Compile Include="Assets\Scripts\LoadingScene\LangaugeSelection.cs" />
     <Compile Include="Assets\Scripts\LoadingScene\SceneController.cs" />
     <Compile Include="Assets\Scripts\Obstacle.cs" />
     <Compile Include="Assets\Scripts\Pause.cs" />
