Th lang in credit page

--- a/100-thai-flag-game.csproj
+++ b/100-thai-flag-game.csproj
@@ -83,10 +83,12 @@
     <Compile Include="Assets\Scripts\FlagCtrl.cs" />
     <Compile Include="Assets\Scripts\GameController\ObstacleController.cs" />
     <Compile Include="Assets\Scripts\HorizontalMovementBird.cs" />
+    <Compile Include="Assets\Scripts\Info\InfoLang.cs" />
     <Compile Include="Assets\Scripts\LoadingScene\Fading.cs" />
     <Compile Include="Assets\Scripts\LoadingScene\LangaugeSelection.cs" />
     <Compile Include="Assets\Scripts\LoadingScene\SceneController.cs" />
     <Compile Include="Assets\Scripts\MainMenu\AskName.cs" />
+    <Compile Include="Assets\Scripts\MainMenu\BackToMenu.cs" />
     <Compile Include="Assets\Scripts\MainMenu\GoToInfo.cs" />
     <Compile Include="Assets\Scripts\MainMenu\GoToScoreBoard.cs" />
     <Compile Include="Assets\Scripts\MainMenu\LogoControl.cs" />
