Add spritesheets for animation

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,19 +47,38 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Airplane.cs" />
+     <Compile Include="Assets\Scripts\BackgroundCtrl.cs" />
      <Compile Include="Assets\Scripts\Bird.cs" />
-     <Compile Include="Assets\Scripts\ButtonEvent.cs" />
+     <Compile Include="Assets\Scripts\BoxSpawner.cs" />
      <Compile Include="Assets\Scripts\CameraCtrl.cs" />
-     <Compile Include="Assets\Scripts\ChangeScene.cs" />
+     <Compile Include="Assets\Scripts\DiagonalMovementBird.cs" />
+     <Compile Include="Assets\Scripts\Drone.cs" />
      <Compile Include="Assets\Scripts\FlagControl.cs" />
      <Compile Include="Assets\Scripts\FlagCtrl.cs" />
-     <Compile Include="Assets\Scripts\FloorDetection.cs" />
+     <Compile Include="Assets\Scripts\GameController\ObstacleController.cs" />
      <Compile Include="Assets\Scripts\HorizontalMovementBird.cs" />
-     <Compile Include="Assets\Scripts\LanguageManager.cs" />
+     <Compile Include="Assets\Scripts\Info\InfoLang.cs" />
+     <Compile Include="Assets\Scripts\Info\LinkToOutside.cs" />
+     <Compile Include="Assets\Scripts\LevelManager.cs" />
+     <Compile Include="Assets\Scripts\LoadingScene\Fading.cs" />
+     <Compile Include="Assets\Scripts\LoadingScene\LangaugeSelection.cs" />
+     <Compile Include="Assets\Scripts\LoadingScene\SceneController.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\AskName.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\BackToMenu.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\GoToInfo.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\GoToScoreBoard.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\LogoControl.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\StartGame.cs" />
+     <Compile Include="Assets\Scripts\MainMenu\Welcome.cs" />
      <Compile Include="Assets\Scripts\Obstacle.cs" />
+     <Compile Include="Assets\Scripts\Pause.cs" />
      <Compile Include="Assets\Scripts\PoleCtrl.cs" />
-     <Compile Include="Assets\Scripts\WindForce.cs" />
-     <Compile Include="Assets\Sprites\Drone.cs" />
+     <Compile Include="Assets\Scripts\PoopyBird.cs" />
+     <Compile Include="Assets\Scripts\Reset.cs" />
+     <Compile Include="Assets\Scripts\Scoreboard\ScoreHeaderLang.cs" />
+     <Compile Include="Assets\Scripts\SinusoidalMovementBird.cs" />
+     <Compile Include="Assets\Scripts\SpriteFading.cs" />
+     <Compile Include="Assets\Scripts\Utility.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
