--- a/100-thai-flag-game.csproj
+++ b/100-thai-flag-game.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Assets\Scripts\FlagCtrl.cs" />
     <Compile Include="Assets\Scripts\GameController\ObstacleController.cs" />
     <Compile Include="Assets\Scripts\GameController\PauseButton.cs" />
+    <Compile Include="Assets\Scripts\GameController\ResumeButton.cs" />
     <Compile Include="Assets\Scripts\GameController\ScoreTextUpdate.cs" />
     <Compile Include="Assets\Scripts\HorizontalMovementBird.cs" />
     <Compile Include="Assets\Scripts\Info\InfoLang.cs" />
