--- a/100-thai-flag-game.csproj
+++ b/100-thai-flag-game.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Assets\Scripts\Drone.cs" />
     <Compile Include="Assets\Scripts\FlagControl.cs" />
     <Compile Include="Assets\Scripts\FlagCtrl.cs" />
+    <Compile Include="Assets\Scripts\GameController\GameCore.cs" />
     <Compile Include="Assets\Scripts\GameController\ObstacleController.cs" />
     <Compile Include="Assets\Scripts\GameController\PauseButton.cs" />
     <Compile Include="Assets\Scripts\GameController\ResumeButton.cs" />
