--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,19 +47,19 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Airplane.cs" />
-     <Compile Include="Assets\Scripts\BackgroundCtrl.cs" />
      <Compile Include="Assets\Scripts\Bird.cs" />
-     <Compile Include="Assets\Scripts\BoxSpawner.cs" />
      <Compile Include="Assets\Scripts\CameraCtrl.cs" />
-     <Compile Include="Assets\Scripts\DiagonalMovementBird.cs" />
      <Compile Include="Assets\Scripts\Drone.cs" />
      <Compile Include="Assets\Scripts\FlagControl.cs" />
      <Compile Include="Assets\Scripts\FlagCtrl.cs" />
+     <Compile Include="Assets\Scripts\GameController\GameCore.cs" />
      <Compile Include="Assets\Scripts\GameController\ObstacleController.cs" />
+     <Compile Include="Assets\Scripts\GameController\PauseButton.cs" />
+     <Compile Include="Assets\Scripts\GameController\ResumeButton.cs" />
+     <Compile Include="Assets\Scripts\GameController\ScoreTextUpdate.cs" />
      <Compile Include="Assets\Scripts\HorizontalMovementBird.cs" />
      <Compile Include="Assets\Scripts\Info\InfoLang.cs" />
      <Compile Include="Assets\Scripts\Info\LinkToOutside.cs" />
-     <Compile Include="Assets\Scripts\LevelManager.cs" />
      <Compile Include="Assets\Scripts\LoadingScene\Fading.cs" />
      <Compile Include="Assets\Scripts\LoadingScene\LangaugeSelection.cs" />
      <Compile Include="Assets\Scripts\LoadingScene\SceneController.cs" />
@@ -73,11 +73,9 @@
      <Compile Include="Assets\Scripts\Obstacle.cs" />
      <Compile Include="Assets\Scripts\Pause.cs" />
      <Compile Include="Assets\Scripts\PoleCtrl.cs" />
-     <Compile Include="Assets\Scripts\PoopyBird.cs" />
      <Compile Include="Assets\Scripts\Reset.cs" />
      <Compile Include="Assets\Scripts\Scoreboard\ScoreHeaderLang.cs" />
-     <Compile Include="Assets\Scripts\SinusoidalMovementBird.cs" />
-     <Compile Include="Assets\Scripts\SpriteFading.cs" />
+     <Compile Include="Assets\Scripts\Scoreboard\Scoreboard.cs" />
      <Compile Include="Assets\Scripts\Utility.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
