--- a/100-thai-flag-game.csproj
+++ b/100-thai-flag-game.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Assets\Scripts\Scoreboard\Scoreboard.cs" />
     <Compile Include="Assets\Scripts\Tutorial\DesktopPlatformTutorial.cs" />
     <Compile Include="Assets\Scripts\Tutorial\FlagMovement.cs" />
+    <Compile Include="Assets\Scripts\Tutorial\LanguageManager.cs" />
     <Compile Include="Assets\Scripts\Tutorial\MobilePlatformTutorial.cs" />
     <Compile Include="Assets\Scripts\Tutorial\TutorialSelection.cs" />
     <Compile Include="Assets\Scripts\Utility.cs" />
