Helicopter and fixbug on rocket

--- a/100-thai-flag-game.csproj
+++ b/100-thai-flag-game.csproj
@@ -90,6 +90,8 @@
     <Compile Include="Assets\Scripts\GameController\PauseButton.cs" />
     <Compile Include="Assets\Scripts\GameController\ResumeButton.cs" />
     <Compile Include="Assets\Scripts\GameController\ScoreTextUpdate.cs" />
+    <Compile Include="Assets\Scripts\HelicopterMovement.cs" />
+    <Compile Include="Assets\Scripts\HelicopterMovement1.cs" />
     <Compile Include="Assets\Scripts\HorizontalMovementBird.cs" />
     <Compile Include="Assets\Scripts\Info\InfoLang.cs" />
     <Compile Include="Assets\Scripts\Info\LinkToOutside.cs" />
