--- a/100-thai-flag-game.csproj
+++ b/100-thai-flag-game.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Assets\Scripts\PoopyBird.cs" />
     <Compile Include="Assets\Scripts\Reset.cs" />
     <Compile Include="Assets\Scripts\RocketMovement.cs" />
+    <Compile Include="Assets\Scripts\Scoreboard\ConnectionFail.cs" />
     <Compile Include="Assets\Scripts\Scoreboard\ScoreHeaderLang.cs" />
     <Compile Include="Assets\Scripts\Scoreboard\Scoreboard.cs" />
     <Compile Include="Assets\Scripts\SinusoidalMovementBird.cs" />
