--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,8 @@
      <Compile Include="Assets\Scripts\Bird.cs" />
      <Compile Include="Assets\Scripts\BoxSpawner.cs" />
      <Compile Include="Assets\Scripts\CameraCtrl.cs" />
+     <Compile Include="Assets\Scripts\CloudMaker.cs" />
+     <Compile Include="Assets\Scripts\CloudMovement.cs" />
      <Compile Include="Assets\Scripts\DiagonalMovementBird.cs" />
      <Compile Include="Assets\Scripts\Drone.cs" />
      <Compile Include="Assets\Scripts\FlagControl.cs" />
@@ -61,9 +63,12 @@
      <Compile Include="Assets\Scripts\GameController\PauseButton.cs" />
      <Compile Include="Assets\Scripts\GameController\ResumeButton.cs" />
      <Compile Include="Assets\Scripts\GameController\ScoreTextUpdate.cs" />
+     <Compile Include="Assets\Scripts\HelicopterMovement.cs" />
+     <Compile Include="Assets\Scripts\HelicopterMovement1.cs" />
      <Compile Include="Assets\Scripts\HorizontalMovementBird.cs" />
      <Compile Include="Assets\Scripts\Info\InfoLang.cs" />
      <Compile Include="Assets\Scripts\Info\LinkToOutside.cs" />
+     <Compile Include="Assets\Scripts\KiteMovement.cs" />
      <Compile Include="Assets\Scripts\LevelManager.cs" />
      <Compile Include="Assets\Scripts\LoadingScene\Fading.cs" />
      <Compile Include="Assets\Scripts\LoadingScene\LangaugeSelection.cs" />
@@ -80,15 +85,18 @@
      <Compile Include="Assets\Scripts\PoleCtrl.cs" />
      <Compile Include="Assets\Scripts\PoopyBird.cs" />
      <Compile Include="Assets\Scripts\Reset.cs" />
+     <Compile Include="Assets\Scripts\RocketMovement.cs" />
      <Compile Include="Assets\Scripts\Scoreboard\ScoreHeaderLang.cs" />
      <Compile Include="Assets\Scripts\Scoreboard\Scoreboard.cs" />
      <Compile Include="Assets\Scripts\SinusoidalMovementBird.cs" />
+     <Compile Include="Assets\Scripts\SoundManager.cs" />
      <Compile Include="Assets\Scripts\SpriteFading.cs" />
      <Compile Include="Assets\Scripts\Tutorial\DesktopPlatformTutorial.cs" />
      <Compile Include="Assets\Scripts\Tutorial\FlagMovement.cs" />
      <Compile Include="Assets\Scripts\Tutorial\LanguageManager.cs" />
      <Compile Include="Assets\Scripts\Tutorial\MobilePlatformTutorial.cs" />
      <Compile Include="Assets\Scripts\Tutorial\TutorialSelection.cs" />
+     <Compile Include="Assets\Scripts\Tutorial\WarningText.cs" />
      <Compile Include="Assets\Scripts\Utility.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
